Supermarket-Management-System/compiling_error.txt
/Users/zolar/OneDrive - Queen Mary, University of London/Project/Supermarket-Management-System/Supermarket-Management-System/add_goods.cpp:578:34: error: invalid application of 'sizeof' to an incomplete type 'STU_goods_index []'
    memset(goods_index, 0, sizeof(goods_index));
                                 ^~~~~~~~~~~~~
1 error generated.
